# StellarRoute

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  Roadmap.md  docker-compose.yml  findings.md  progress.md  requirement.md  task_plan.md
.github/workflows/: ci.yml  deploy-testnet.yml  gas-benchmarks.yml  verify-contracts.yml
audit/: README.md  architecture.md  assumptions.md  known-issues.md  scope.md
config/: networks.json  pools-mainnet.json  pools-testnet.json  tokens-mainnet.json  tokens-testnet.json
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  lib.rs  server.rs  telemetry.rs
crates/api/src/middleware/: rate_limit.rs
crates/api/src/models/: request.rs
crates/api/src/routes/: health.rs  mod.rs  orderbook.rs  quote.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: adapters.rs  benchmarks.rs  constant_product_adapter.rs  errors.rs  events.rs  governance.rs  lib.rs  router.rs  storage.rs  test.rs  tokens.rs  types.rs  upgrade.rs
crates/contracts/test_snapshots/benchmarks/: bench_estimate_resources.1.json  bench_execute_swap_1_hop.1.json  bench_execute_swap_4_hops.1.json  bench_get_quote_1_hop.1.json  bench_get_quote_2_hops.1.json  bench_get_quote_4_hops.1.json  bench_initialize.1.json  bench_register_pool.1.json  stress_test_max_complexity.1.json
crates/contracts/test_snapshots/test/: property_all_contract_errors_are_reachable.1.json  property_fee_deducted_at_correct_rate.1.json  property_more_hops_means_less_output.1.json  property_output_is_always_less_than_input.1.json  test_2of3_proposal_flow.1.json  test_add_signer_via_proposal.1.json  test_add_token_duplicate_rejected.1.json  test_add_token_success.1.json  test_batch_add_exceeds_limit_rejected.1.json  test_batch_add_tokens.1.json  test_cancel_proposal_by_proposer.1.json  test_cancel_upgrade_by_non_proposer_fails.1.json  test_cancel_upgrade_removes_pending_state.1.json  test_change_threshold_above_signers_rejected.1.json  test_change_threshold_via_proposal.1.json  test_commit_reveal_flow.1.json  test_commitment_required_for_large_swap.1.json  test_configure_mev_success.1.json  test_deadline_and_not_before_combined.1.json  test_duplicate_approval_rejected.1.json  test_execute_upgrade_with_no_pending_fails.1.json  test_expired_commitment.1.json  test_full_lifecycle.1.json  test_get_admin_after_init.1.json  test_get_admin_after_set_admin.1.json  test_get_admin_uninitialized.1.json  test_get_fee_rate_after_init.1.json  test_get_fee_rate_uninitialized.1.json  test_get_fee_to_address_after_init.1.json  test_get_fee_to_address_uninitialized.1.json  test_get_pool_count_after_init.1.json  test_get_pool_count_increments.1.json  test_get_pool_count_uninitialized.1.json  test_get_quote_empty_hops_fails.1.json  test_get_quote_failing_pool_returns_error.1.json  test_get_quote_more_hops_more_price_impact.1.json  test_get_quote_negative_amount_fails.1.json  test_get_quote_single_hop.1.json  test_get_quote_too_many_hops_fails.1.json  test_get_quote_unregistered_pool_fails.1.json  (+80 more)
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 0003_trading_pairs_and_snapshots.sql
crates/indexer/src/: error.rs  lib.rs  sdex.rs  soroban.rs  telemetry.rs
crates/indexer/src/config/: mod.rs
crates/indexer/src/db/: archival.rs  connection.rs  health.rs
crates/indexer/src/error/: tests.rs
crates/indexer/src/horizon/: client.rs
crates/indexer/src/models/: asset.rs  horizon.rs  offer.rs
crates/indexer/tests/: integration_test.rs
crates/routing/: Cargo.toml
crates/routing/src/: error.rs  lib.rs  pathfinder.rs
crates/sdk-rust/: Cargo.toml
crates/sdk-rust/src/: client.rs  error.rs  lib.rs  types.rs
docs/: README.md
docs/architecture/: database-schema.md  diagrams.md
docs/contracts/: gas-benchmarks.md  gas-optimization-usage.md
docs/deployment/: README.md
docs/development/: SETUP.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: DemoSwap.tsx  Header.tsx  TransactionHistory.tsx
frontend/hooks/: useApi.ts  useTradeSettings.ts  useTransactionHistory.ts
frontend/lib/: constants.ts  trade-utils.ts
frontend/types/: index.ts  route.ts  (+1 more)
scripts/: deploy.sh  monitor.sh  register-pools.sh  setup.sh  upgrade.sh  verify.sh
(+17 files in other folders)
