[package]
name = "stellarroute-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
soroban-sdk = "21.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
