[package]
name = "stellarroute-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true

# Stellar SDK (TBD - need to find correct package)
# stellar-sdk = "?"

# Add other indexer-specific dependencies here

[dev-dependencies]
tokio-test = "0.4"
